components/workspaces/staging/stone-stg-host/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    provider: workspaces
    app: rest-api-server
  name: workspaces-rest-api-server
  namespace: workspaces-system
spec:
  host: workspaces-rest-api-server-workspaces-system.apps.stone-stg-host.qc0p.p1.openshiftapps.com
  port:
    targetPort: 8000
  tls:
    termination: edge
  to:
    kind: Service
    name: workspaces-rest-api-server
    weight: 100
  wildcardPolicy: None
